<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">salinewin</string>
    <string name="btn_start">START OVERLAY</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_toggle">F5 TOGGLE</string>
    <string name="btn_hue_inc">F6 HUE+</string>
    <string name="btn_hue_dec">F7 HUE-</string>
    <string name="btn_reset">F8 RESET</string>
    <string name="btn_remote">REMOTE CONTROL</string>
    <string name="btn_connect">CONNECT</string>
    <string name="btn_disconnect">DISCONNECT</string>
    <string name="btn_status">REFRESH STATUS</string>
    <string name="lbl_hue">Hue: 0°</string>
    <string name="lbl_sat">Saturation: 100%</string>
    <string name="lbl_bri">Brightness: 100%</string>
    <string name="hint_adb">adb forward tcp:9999 tcp:9999</string>
    <string name="channel_name">salinewin overlay</string>
</resources>
